--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<div id="human-buttons"></div>
 
+	<div id="gif-dump"></div>
+
 	<form id="human-form">
 		<label for="human-input">Add a human!</label>
 		<input type="text" id="human-input"><br>
