Not so much evolved as devolved

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
-	<div id="human-buttons"></div>
+	<header>
+		<div id="human-buttons"></div>
+	</header>
 
-	<div id="gif-dump"></div>
+	<br><br>
+	
+	<section>
+		<div id="gif-dump">GIFDUMP HERE!!!</div>
+	</section>
 
 	<form id="human-form">
 		<label for="human-input">Add a human!</label>
