--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<input id="add-human" type="submit" value="Submit">
 	</form>
 
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/app.js"></script>
 </body>
 </html>
