Everything functions as it should, final commit before making changes to CSS

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
 
 	<header>
-		<div id="human-buttons"></div>
+		<div id="spot-buttons"></div>
 	</header>
 
 	<br><br>
 	
 	<section>
-		<div id="gif-dump">GIFDUMP HERE!!!</div>
+		<div id="gif-dump">Vacation Spots</div>
 	</section>
 
-	<form id="human-form">
-		<label for="human-input">Add a human!</label>
-		<input type="text" id="human-input"><br>
-		<input id="add-human" type="submit" value="Submit">
+	<form id="spot-form">
+		<label for="spot-input">Where would you like to go?</label>
+		<input type="text" id="spot-input"><br>
+		<input id="add-spot" type="submit" value="Submit">
 	</form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
